# lms

./: .gitignore
backend/: .env  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260409_000001_create_auth_tables.py  20260410_000002_add_lms_domain_tables.py  20260411_000003_add_module_contents_table.py  20260411_000004_add_comment_replies.py  20260415_000005_add_soft_delete_to_comments.py  20260415_000006_add_presentation_module_content_type.py  20260416_000007_add_assignments_and_submissions.py  20260416_000008_add_assignment_attachment_tables.py
backend/app/: main.py
backend/app/__pycache__/: __init__.cpython-314.pyc.2276326360544  main.cpython-314.pyc.2274185884960
backend/app/api/: router.py
backend/app/core/: config.py
backend/app/models/: __init__.py  admin_audit_log.py  assignment.py  chat_group.py  chat_message.py  comment.py  content_progress.py  course.py  course_collaborator.py  enrollment.py  module.py  module_content.py  notification.py  quiz.py  report.py  user.py
backend/app/repositories/: __init__.py  admin_audit_log.py  assignment.py  chat.py  chat_group.py  comment.py  content_progress.py  course.py  course_collaborator.py  enrollment.py  module.py  module_content.py  notification.py  quiz.py  refresh_token.py  (+2 more)
backend/lms_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: add_golang_modules.py  add_low_risk_students.py  add_placeholder_courses.py  seed_demo_analytics.py
backend/tests/: conftest.py  test_auth.py  test_lms_features.py
(+189 files in other folders)
