[project]
name = "lms-backend"
version = "0.1.0"
description = "Backend foundation for LMS auth and analytics platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudinary>=1.44.1",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "groq>=0.26.0",
    "psycopg[binary]>=3.2.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.6.0",
    "PyJWT>=2.10.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
